--- a/P1/pruebas_cv/prueba1.css
+++ b/P1/pruebas_cv/prueba1.css
@@ -1,4 +1,4 @@
 image-fondo {
-    background-image: url("2020-2021-CSAAI-Practicas/P1/pruebas_cv/villa.jpg");
+    background-image: url("villa.jpg");
     background-size: cover;
 }
