--- a/P1/pruebas_cv/prueba1.css
+++ b/P1/pruebas_cv/prueba1.css
@@ -1,4 +1,54 @@
-* {
-    background-image: url("villa.jpg");
+body {
+    background: rgb(243, 123, 11);
+}
+
+.title {
+    font-size: 5.6rem;
+    font-family: 'Lobster', cursive;
+    display: scroll;
+    position: fixed;
+    top: 0px;
+    right:10px;
+  }
+.wrapper {
+    background: url("villa.jpg");
+    background-repeat: repeat-y;
     background-size: cover;
+    color: rgb(212, 90, 8);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 1000px;
+    perspective-origin: 50% 50%;
+    animation: animation 100s linear infinite;
+  }
+aside{
+    width: 30%;
+    border: #e77307  5px dotted;
+    margin: 0px;
+    padding:10px;
+    text-align: justify;
+    position: fixed;
+    bottom: 200px;
+    left:5px;
+    }
+.titles {
+    text-align: center;
+    color: black;
+    background-color: chocolate;
+    }
+.contacts{
+    font-family: cursive;
+    font-size: medium;
+    text-align: center;
+    color: black;
+    background-color: chocolate;
+    }
+      
+@keyframes animation {
+    100%{
+    background-position:0px -3000px;
+    }
 }
