--- a/P1/index.css
+++ b/P1/index.css
@@ -16,7 +16,7 @@ body {
     background-size: cover;
     color: rgb(212, 90, 8);
     width: 100%;
-    height: 1400px;
+    height: 1600px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,15 +68,17 @@ h1 {
 .cuerpo {
     width: 800px;
     border: 1px solid rgb(241, 97, 1);
-    top:100px;
+    top:50px;
     margin-left:400px;
+
+
 
  }
 .academic {
     width: 1200px;
     border: 1px solid rgb(241, 97, 1);
     margin-left: 90px;
-    margin-bottom: 410px;
+    margin-bottom: 500px;
     margin-top: 0px;
 
  }
@@ -108,7 +110,7 @@ h1 {
     justify-content: center;
     align-items: center;
     position: fixed;
-    top:800px;
+    top:900px;
     left:5px;
 
 }
@@ -138,4 +140,23 @@ h1 {
     top: 60%;
     left: 80%;
     transform: translate(-50%, -50%);
+}
+.teacher{
+    width: 600px;
+    border: #0026ff  5px dotted;
+    margin: 10px;
+    padding:10px;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top:900px;
+    left: 600px;;
+
+}
+.senseis {
+    display:inline;
+    padding-left:3px;
+    padding-right:3px;
+   background-color:black;
 }
