--- a/P2/index.css
+++ b/P2/index.css
@@ -1,19 +1,38 @@
 body {
     background: rgb(14, 13, 13);
 }
+#caja{
+    display: block;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 10px;
+    width: 300px;
+    height: 90px;
+    line-height: 100px;
+    background-color: black;
+    border-radius: 20px;
+    overflow-y: scroll;
+}
 .calculadora{
     display: block;
     margin: 0 auto;
     padding: 20px;
     background-color: orange;
-    width: 50px;
-    height: 30px;
+    width: 340px;
+    height: 400px;
     border-radius: 10px;
+    margin-top: 200px;
 }
 .calculadora td button{
     display: block;
-    width: 60px;
-    height: 60px;
-    font-size: 20px;
+    width: 35px;
+    height: 30px;
+    font-size:20px;
 }
-
+#suma{
+    display: block;
+    text-align: center;
+    font-size: 40px;
+    width: 35px;
+    height: 100px;
+}
