--- a/P2/index.css
+++ b/P2/index.css
@@ -1,7 +1,16 @@
 body {
     background: rgb(14, 13, 13);
 }
+.fondo{
+    position:absolute;
+    height:600px;
+    width:600px;
+    top: 200px;
+    left : 40px;
+    z-index: -1;
+}
 #caja{
+    color: blanchedalmond;
     display: block;
     text-align: center;
     font-size: 40px;
@@ -15,6 +24,7 @@ body {
 }
 .calculadora{
     display: block;
+    position: absolute;
     margin: 0 auto;
     padding: 20px;
     background-color: orange;
@@ -22,6 +32,8 @@ body {
     height: 400px;
     border-radius: 10px;
     margin-top: 200px;
+    margin-left: 250px;
+    z-index: 1;
 }
 .calculadora td button{
     display: block;
