--- a/P3/index.css
+++ b/P3/index.css
@@ -11,4 +11,11 @@ canvas {
     border-width: 10px;
     border-color:white;
     border-radius: 5px;
-  }
+}
+#play,#mute{
+  display: inline-block;
+  padding: 16px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+iframe{display: none;}
