calc casi terminada falta raiz

--- a/P2/index.css
+++ b/P2/index.css
@@ -17,3 +17,8 @@
     color: aliceblue;
     font-size: larger;
 }
+.calc{
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
